tests/fcode/errors/err_parameter_without_type_implicit_none.f
      subroutine cst(a)
      implicit none
      real a
      parameter ( zero = 0.0e+0 )
      end
